# solar-solution

./: .coverage  .gitignore  ACTION_PLAN.md  BUGFIX_NUMERIC_TYPES.md  CONTRIBUTING.md  MATERIAL_ICONS_GUIDE.md  MODERNIZATION.md  MULTIPAGE_FEATURE.md  PHASE3_COMPLETION.md  PHASE4_PROGRESS.md  README.md  TECHNICAL.md  app.py  equipment_library.json  main.py  main_backup.py  main_new.py  pyproject.toml  pytest.ini  replace_emojis.py
locals/: en.json  fr.json
models/: __init__.py  equipment.py
pages/: 1_Equipments.py  2_Calculations.py  3_Report.py
tests/: __init__.py  test_calculations.py  test_models.py
utils/: __init__.py  calculations.py  charts.py  storage.py  translations.py
